# STM32F769-Disco

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
Core/Inc/: main.h  stm32f7xx_hal_conf.h  tim.h  usart.h
Core/Src/: gpio.c  main.c  stm32f7xx_it.c  tim.c  usart.c
Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
